--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<h1 class="h1">My Playlist</h1>
+	<div class="list1">
+	<ul class="list">
+		<li><a href="#"> Song 1</a></li>
+		<li><a href="#"> Song 2</a></li>
+		<li><a href="#"> Song 3</a></li>
+		<li><a href="#"> Song 4</a></li>
+		<li><a href="#"> Song 5</a></li>
+	</ul>
+		</div>
+	
+	<h2 class="h2">Now Playing...</h2>
+	
+	<div class="playing">
+	<video controls  class="player_one">
+		<source src="https://www.w3schools.com/tags/movie.mp4">
+	</video>
+	<h2>MP3 songs</h2>
+	<audio controls class="player_two" src="https://www.pagalworld.com.se/files/download/id/64630" >
+		Maan meri Jaan
+	</audio>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
