--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
 	<h1 class="h1">My Playlist</h1>
 	<div class="list1">
 	<ul class="list">
-		<li><a href="#"> Song 1</a></li>
-		<li><a href="#"> Song 2</a></li>
-		<li><a href="#"> Song 3</a></li>
-		<li><a href="#"> Song 4</a></li>
-		<li><a href="#"> Song 5</a></li>
+		<li><a target="_blank" href="#"> Song 1</a></li>
+		<li><a target="_blank" href="#"> Song 2</a></li>
+		<li><a target="_blank" href="#"> Song 3</a></li>
+		<li><a target="_blank" href="#"> Song 4</a></li>
+		<li><a target="_blank" href="#"> Song 5</a></li>
 	</ul>
 		</div>
 	
@@ -27,8 +27,9 @@
 		<source src="https://www.w3schools.com/tags/movie.mp4">
 	</video>
 	<h2>MP3 songs</h2>
-	<audio controls class="player_two" src="https://www.pagalworld.com.se/files/download/id/64630" >
+	<audio controls class="player_two" >
 		Maan meri Jaan
+		<source  src="https://www.pagalworld.com.se/files/download/id/64630">
 	</audio>
 	</div>
     <script type="text/javascript" src="./script.js">
