--- a/main.html
+++ b/main.html
@@ -24,12 +24,12 @@
 	
 	<div class="playing">
 	<video controls  class="player_one">
-		<source src="https://www.w3schools.com/tags/movie.mp4">
+		<source src="https://www.w3schools.com/tags/movie.mp4" type="video">
 	</video>
 	<h2>MP3 songs</h2>
 	<audio controls class="player_two" >
 		Maan meri Jaan
-		<source  src="https://www.pagalworld.com.se/files/download/id/64630">
+		<source  src="https://www.pagalworld.com.se/files/download/id/64630" type="audio">
 	</audio>
 	</div>
     <script type="text/javascript" src="./script.js">
